--- a/rest_api/Dockerfile-installed
+++ b/rest_api/Dockerfile-installed
@@ -15,7 +15,7 @@
 # docker build -f rest_api/Dockerfile-installed -t sawtooth-rest-api .
 
 # -------------=== signing build ===-------------
-FROM ubuntu:xenial as sawtooth-signing-builder
+FROM ubuntu:artful as sawtooth-signing-builder
 
 ENV VERSION=AUTO_STRICT
 
@@ -89,6 +89,7 @@ RUN echo "deb http://repo.sawtooth.me/ubuntu/ci xenial universe" >> /etc/apt/sou
     python3 \
     python3-aiodns \
     python3-aiohttp \
+    python3-aiohttp-cors \
     python3-cchardet\
     python3-grpcio-tools \
     python3-grpcio \
