--- a/rest_api/Dockerfile-installed
+++ b/rest_api/Dockerfile-installed
@@ -15,11 +15,11 @@
 # docker build -f rest_api/Dockerfile-installed -t sawtooth-rest-api .
 
 # -------------=== signing build ===-------------
-FROM ubuntu:artful as sawtooth-signing-builder
+FROM ubuntu:xenial as sawtooth-signing-builder
 
 ENV VERSION=AUTO_STRICT
 
-RUN echo "deb http://repo.sawtooth.me/ubuntu/ci artful universe" >> /etc/apt/sources.list \
+RUN echo "deb http://repo.sawtooth.me/ubuntu/ci xenial universe" >> /etc/apt/sources.list \
  && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
  && apt-get update \
  && apt-get install -y -q --allow-downgrades \
@@ -43,11 +43,11 @@ RUN /project/bin/protogen \
 
 # -------------=== python sdk build ===-------------
 
-FROM ubuntu:artful as sawtooth-sdk-python-builder
+FROM ubuntu:xenial as sawtooth-sdk-python-builder
 
 ENV VERSION=AUTO_STRICT
 
-RUN echo "deb http://repo.sawtooth.me/ubuntu/ci artful universe" >> /etc/apt/sources.list \
+RUN echo "deb http://repo.sawtooth.me/ubuntu/ci xenial universe" >> /etc/apt/sources.list \
  && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
  && apt-get update \
  && apt-get install -y -q --allow-downgrades \
@@ -89,7 +89,6 @@ RUN echo "deb http://repo.sawtooth.me/ubuntu/ci xenial universe" >> /etc/apt/sou
     python3 \
     python3-aiodns \
     python3-aiohttp \
-    python3-aiohttp-cors \
     python3-cchardet\
     python3-grpcio-tools \
     python3-grpcio \
